This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: PyObject *po in _listdir_windows_no_opendir is initialized but not used
Type: compile error Stage: resolved
Components: Windows Versions: Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: serhiy.storchaka Nosy List: Alexander Riccio, paul.moore, python-dev, serhiy.storchaka, steve.dower, tim.golden, zach.ware
Priority: normal Keywords:

Created on 2015-12-16 22:38 by Alexander Riccio, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Messages (5)
msg256549 - (view) Author: Alexander Riccio (Alexander Riccio) * Date: 2015-12-16 22:38
See: https://hg.python.org/cpython/file/tip/Modules/posixmodule.c#l3466

The variable PyObject *po in _listdir_windows_no_opendir is initialized but not used. Given that there's a variable named po_wchars, and two PyObject variables, I'm going to guess that the programmer forgot about `v`.
msg256550 - (view) Author: Alexander Riccio (Alexander Riccio) * Date: 2015-12-16 22:38
(in the same function, char *bufptr is ALSO unused)
msg256650 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2015-12-18 08:03
New changeset 77bd84a6964a by Serhiy Storchaka in branch 'default':
Issues #25890, #25891, #25892: Removed unused variables in Windows code.
https://hg.python.org/cpython/rev/77bd84a6964a
msg256652 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2015-12-18 08:07
New changeset 3f32bacd353d by Serhiy Storchaka in branch 'default':
Issue #25890: Removed yet one unused variable.
https://hg.python.org/cpython/rev/3f32bacd353d
msg256653 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2015-12-18 08:07
Thank you Alexander for your reports.
History
Date User Action Args
2022-04-11 14:58:25adminsetgithub: 70078
2015-12-18 08:07:57serhiy.storchakasetstatus: open -> closed
resolution: fixed
messages: + msg256653

stage: resolved
2015-12-18 08:07:18python-devsetmessages: + msg256652
2015-12-18 08:03:37python-devsetnosy: + python-dev
messages: + msg256650
2015-12-18 07:34:10serhiy.storchakasetassignee: serhiy.storchaka

nosy: + serhiy.storchaka
versions: + Python 3.6
2015-12-16 22:38:58Alexander Ricciosetmessages: + msg256550
2015-12-16 22:38:25Alexander Ricciocreate