Issue #25890: Removed yet one unused variable.